2006-05-31  Allan Sandfeld Jensen <kde@carewolf.com>

        Merge WC bug-fixes and clean-up for positioned box-model

        * rendering/Render_box.{h,cpp}:
            (RenderBox::calcAbsoluteHorizontal):
            (RenderBox::calcAbsoluteHorizontalValues):
            (RenderBox::calcAbsoluteVertical):
            (RenderBox::calcAbsoluteVerticalValues): 
            (RenderBox::calcAbsoluteHorizontalReplaced): Handle replaced case separately.
            (RenderBox::calcAbsoluteVerticalReplaced): ditto.

2006-04-20  Allan Sandfeld Jensen <kde@carewolf.com>

        Implement full support for CSS updates on dynamic DOM and user-interaction

        * misc/multimap.h: NEW: A "fast on insert" map with multiple values per key
        * xml/dom_restyler.{h,cpp}: NEW: The dynamic DOM restyler keeps track of changes and issues restyles
        * xml/dom_docimpl.h:
                Remove obsolete usesDescendencyRules.
                Add a dynamicDomRestyler to the document.
        * xml/dom_nodeimpl.{h,cpp}: Add dynamic DOM restyler hooks.
        * xml/dom_elementimpl.{h,cpp}:
                Remove obsolete usesDescendencyRules logic.
                Remove obsolete laterestyle logic.
                Implement DOM restyler hooks.
        * css/cssstyleselector.{h,cpp}:
                Clean-up checkSelector, removing obsolete and redundant arguments
                Fix :link and :visited selector.
                Setup all dynamic dependencies in checkOneSelector.
        * css/cssparser.{h,cpp}: Remove defaultNamespace
        * css/css_stylesheetimpl.{h,cpp}: Add defaultNamespace
        * css/parser.{y,cpp}:
                Remove calls to usesDescendencyRules.
                Use defaultNamespace from stylesheet rather than parser.
        * rendering/render_style.h: Remove obsolete affectedByHoverRules and affectedByActiveRules
        * rendering/render_layer.cpp: Use dynamic DOM restyler to restyle :hover and :active nodes.